<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UploadActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text='@string/type_info'
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#1E000000"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/issues_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#31FFFFFF"
        android:backgroundTint="#000000"
        android:contentDescription="@string/spinner_text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />
    <Button
        android:id="@+id/image_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="318dp"
        android:onClick="uploadImage"
        android:text="@string/upload_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/issues_spinner"
        app:layout_constraintTop_toBottomOf="@+id/issues_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>